<resources>
    <string name="app_name">EX01-05ProjetosComSpinnerRadioGroups</string>
    <string name="choose_dice_type">Escolha o tipo de dado:</string>
    <string name="quantity_of_dice">Quantidade de dados:</string>
    <string name="roll_dice">Rolar Dados</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="d100">D100</string>
</resources>